// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facility should render a default facility avatar 1`] = `
<div
  class="avatar five"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with aria hidden 1`] = `
<div
  class="avatar five"
>
  <span
    alt="London"
    aria-hidden="true"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with color variant one 1`] = `
<div
  class="avatar one"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render a facility avatar with custom props 1`] = `
<div
  class="avatar five"
  id="custom props facility"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render an avatar with an automated color variant, based on a hashValue 1`] = `
<div
  class="avatar two"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render an avatar with color variant netural 1`] = `
<div
  class="avatar neutral"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render fallback facility avatar when invalid image is passed in 1`] = `
<div
  class="avatar five image"
>
  <img
    alt="London"
    class="image cover default image hidden"
    src="https://path/to/invalid_image.jpg"
  />
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render image facility avatar when image is passed in 1`] = `
<div
  class="avatar five image"
>
  <img
    alt="London"
    class="image cover default image hidden"
    src="test-file-stub"
  />
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;

exports[`Facility should render with a facility avatar with provided size 1`] = `
<div
  class="avatar five"
  style="font-size:5em"
>
  <span
    alt="London"
    aria-hidden="false"
    aria-label="London"
    class="icon facility"
    role="img"
  />
</div>
`;
